// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class_with_generics.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import React from 'react';

/*:: type Props = {
  foo?: ?string,
  bar: number,
}; */

/*:: type State = { baz: number }; */

class Component extends React.Component/*:: <Props, State> */ {
}

=====================================output=====================================
import React from "react";

/*:: type Props = {
  foo?: ?string,
  bar: number,
}; */

/*:: type State = { baz: number }; */

class Component extends React.Component /*:: <Props, State> */ {}

================================================================================
`;

exports[`constructor-field-override.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/prettier/prettier/issues/1481
class Foo {
  constructor: () => this;
}

=====================================output=====================================
// https://github.com/prettier/prettier/issues/1481
class Foo {
  constructor: () => this;
}

================================================================================
`;

exports[`functions.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

export function updateStoreFromURL(
  store /*: Store*/,
  {search, hash} /*: {search: string, hash: string}*/
) {}

=====================================output=====================================
export function updateStoreFromURL(
  store /*: Store*/,
  { search, hash } /*: {search: string, hash: string}*/
) {}

================================================================================
`;
